fix footer alignment

--- a/wifidb/wifidb/themes/vistumbler_mobile/html5style.css
+++ b/wifidb/wifidb/themes/vistumbler_mobile/html5style.css
@@ -24,7 +24,7 @@ th, td {
 	margin-left: 228px;
 }
 
-.foot,active{
+.foot.active{
 	margin-left: 0px;
 }
 
